--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@types/react": "^18.0.14",
+    "js-cookie": "^3.0.1",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
