--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@types/react": "^18.0.14",
+    "eslint-plugin-react-hooks": "^4.7.0-next-49f8254d6-20220722",
     "js-cookie": "^3.0.1",
     "next": "12.2.0",
     "react": "18.2.0",
