--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@types/react": "^18.0.14",
+    "bcryptjs": "^2.4.3",
     "eslint-plugin-react-hooks": "^4.7.0-next-49f8254d6-20220722",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.4.6",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
