--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@types/react": "^18.0.14",
     "bcryptjs": "^2.4.3",
@@ -16,9 +17,11 @@
     "js-cookie": "^3.0.1",
     "mongoose": "^6.4.6",
     "next": "12.2.0",
+    "next-auth": "^4.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.33.1"
+    "react-hook-form": "^7.33.1",
+    "react-toastify": "^9.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
