--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@types/react": "^18.0.14",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "eslint-plugin-react-hooks": "^4.7.0-next-49f8254d6-20220722",
     "js-cookie": "^3.0.1",
