Create Register Screen

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://sign_translation_webapp:8765432123@cluster0.l0ufwcy.mongodb.net/sign_translation_webapp?retryWrites=true&w=majority
+PAYPAL_CLIENT_ID=AYRA377RBPPLVQx9IFSVIzB4U5wPWTRqqk2KKtNu08m5TTeWYC-jcCw4wVExmKE6LZc7dWDxwSwTWWnJ
