--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@paypal/react-paypal-js": "^7.8.1",
     "@types/react": "^18.0.14",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "eslint-plugin-react-hooks": "^4.7.0-next-49f8254d6-20220722",
+    "google-meet-api": "^1.0.0",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.4.6",
     "next": "12.2.0",
