--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.14",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.8.2",
     "eslint-plugin-react-hooks": "^4.7.0-next-49f8254d6-20220722",
     "google-meet-api": "^1.0.0",
     "js-cookie": "^3.0.1",
@@ -22,6 +23,7 @@
     "next": "12.2.0",
     "next-auth": "^4.10.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-toastify": "^9.0.7"
