--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.8.2",
+    "cloudinary": "^1.30.1",
     "eslint-plugin-react-hooks": "^4.7.0-next-49f8254d6-20220722",
     "google-meet-api": "^1.0.0",
     "js-cookie": "^3.0.1",
