--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ PAYPAL_CLIENT_ID=AYRA377RBPPLVQx9IFSVIzB4U5wPWTRqqk2KKtNu08m5TTeWYC-jcCw4wVExmKE
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dcssixr8d
 NEXT_PUBLIC_CLOUDINARY_API_KEY=675339735881248
 CLOUDINARY_SECRET=a4ghSUnoT2fptxMcSKjZL6AC48s
+JWT_SECRET=somethingsecret
+NEXTAUTH_SECRET=sSAbosoznb2bo0ubvuaAEk4L89hoPZLvY4+yrIY9Ubk=
