--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ NEXT_PUBLIC_CLOUDINARY_API_KEY=675339735881248
 CLOUDINARY_SECRET=a4ghSUnoT2fptxMcSKjZL6AC48s
 JWT_SECRET=somethingsecret
 NEXTAUTH_SECRET=sSAbosoznb2bo0ubvuaAEk4L89hoPZLvY4+yrIY9Ubk=
+NEXTAUTH_URI=http://localhost:3000
