--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ CLOUDINARY_SECRET=a4ghSUnoT2fptxMcSKjZL6AC48s
 JWT_SECRET=somethingsecret
 NEXTAUTH_SECRET=sSAbosoznb2bo0ubvuaAEk4L89hoPZLvY4+yrIY9Ubk=
 NEXTAUTH_URI=http://localhost:3000
+DB_NAME= "sign_translation_webapp"
+PROD_URL = "https://prod.com"
+DEV_URL = "http://localhost:3000"
