--- a/package.json
+++ b/package.json
@@ -9,31 +9,62 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@paypal/react-paypal-js": "^7.8.1",
     "@types/react": "^18.0.14",
     "axios": "^0.27.2",
+    "babel": "^6.23.0",
     "bcryptjs": "^2.4.3",
-    "chart.js": "^3.8.2",
+    "blob-stream": "^0.1.3",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.2.3",
+    "chart.js": "^3.9.1",
+    "chartjs": "^0.3.24",
     "cloudinary": "^1.30.1",
+    "d3": "^7.8.2",
+    "datatables.net": "^1.13.1",
+    "datatables.net-buttons": "^2.3.3",
+    "datatables.net-buttons-dt": "^2.3.3",
+    "datatables.net-dt": "^1.13.1",
+    "date-fns": "^2.29.3",
+    "dns": "^0.2.2",
     "eslint-plugin-react-hooks": "^4.7.0-next-49f8254d6-20220722",
+    "exceljs": "^4.3.0",
+    "fs": "^0.0.1-security",
     "google-meet-api": "^1.0.0",
+    "jquery": "^3.6.3",
     "js-cookie": "^3.0.1",
+    "json2xls": "^0.1.2",
+    "moment": "^2.29.4",
     "mongoose": "^6.4.6",
     "next": "12.2.0",
     "next-auth": "^4.10.2",
+    "node": "^19.6.0",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.13.0",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
-    "react-toastify": "^9.0.7"
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.0.7",
+    "sass": "^1.58.0",
+    "socket.io-client": "^4.6.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
+    "@types/datatables.net-buttons": "^1.4.7",
+    "@types/express": "^4.17.17",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
