--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.6.6",
@@ -21,18 +21,19 @@
     "babel": "^6.23.0",
     "bcryptjs": "^2.4.3",
     "blob-stream": "^0.1.3",
+    "boom": "^7.3.0",
     "boostrap": "^2.0.0",
-    "bootstrap": "^5.2.3",
     "chart.js": "^3.9.1",
     "chartjs": "^0.3.24",
     "cloudinary": "^1.30.1",
+    "core-js": "^3.29.1",
+    "cryptiles": "^4.1.3",
     "d3": "^7.8.2",
     "datatables.net": "^1.13.1",
     "datatables.net-buttons": "^2.3.3",
     "datatables.net-buttons-dt": "^2.3.3",
     "datatables.net-dt": "^1.13.1",
     "date-fns": "^2.29.3",
-    "dns": "^0.2.2",
     "eslint-plugin-react-hooks": "^4.7.0-next-49f8254d6-20220722",
     "exceljs": "^4.3.0",
     "fs": "^0.0.1-security",
@@ -42,7 +43,7 @@
     "json2xls": "^0.1.2",
     "moment": "^2.29.4",
     "mongoose": "^6.4.6",
-    "next": "12.2.0",
+    "next": "^12.3.0",
     "next-auth": "^4.10.2",
     "node": "^19.6.0",
     "pdf-lib": "^1.17.1",
