--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sign-translation-web-app",
+  "name": "pure-budgets-web-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
