--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cloudinary": "^1.30.1",
     "core-js": "^3.29.1",
     "cryptiles": "^4.1.3",
+    "csv-stringify": "^6.3.0",
     "date-fns": "^2.29.3",
     "eslint-plugin-react-hooks": "^4.7.0-next-49f8254d6-20220722",
     "exceljs": "^4.3.0",
@@ -43,6 +44,7 @@
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
+    "react-select": "^5.7.2",
     "react-toastify": "^9.0.7",
     "socket.io-client": "^4.6.1",
     "uuid": "^9.0.0"
