--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "mongoose": "^6.4.6",
     "next": "^12.3.0",
     "next-auth": "^4.10.2",
+    "next-connect": "^0.13.0",
     "node": "^16.0.0",
+    "node-zip": "^1.0.1",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
