--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-router-dom": "^6.8.1",
     "react-select": "^5.7.2",
     "react-toastify": "^9.0.7",
+    "recharts": "^2.5.0",
     "socket.io-client": "^4.6.1",
     "uuid": "^9.0.0"
   },
